--- a/frontweb/src/components/ButtonIcon/styles.scss
+++ b/frontweb/src/components/ButtonIcon/styles.scss
@@ -1,3 +1,31 @@
 .btn-icon {
   color: #fff;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+}
+a {
+  color: inherit;
+}
+
+.btn-container {
+  display: flex;
+  margin: auto;
+
+  :hover {
+    background-color: #407bff !important;
+  }
+}
+
+.btn-icon-container {
+  width: 50px;
+  height: 50px;
+  background-color: #33569b;
+  margin: auto;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  color: inherit;
+
+  :hover {
+    background-color: #33569b;
+  }
 }
