--- a/frontweb/src/pages/Home/styles.scss
+++ b/frontweb/src/pages/Home/styles.scss
@@ -30,9 +30,10 @@
   button {
     max-width: 470px;
     margin: auto;
-    padding: 15px 12px;
+    height: 50px;
     display: flex;
     justify-content: center;
+
     h6 {
       font-size: 1.2em;
     }
@@ -103,27 +104,30 @@
     padding: 0px 10px 0px 10px;
     margin: 155px 100px;
     h1 {
-      margin-bottom: 25px;
+      margin-bottom: 30px;
       width: 680px;
       font-size: 1em;
     }
     p {
       color: #9e9e9e;
-      font-size: 0.5em;
+      font-size: 0.4em;
       margin-bottom: 150px;
       max-width: 516px;
     }
     button {
       margin: 0;
+      align-items: center;
+      width: 450px;
     }
   }
 
   .home-image-container {
     display: flex;
     margin: auto;
+    margin-right: 100px;
     svg {
       width: 100%;
-      height: 480px;
+      height: 600px;
     }
   }
 }
