--- a/frontweb/src/pages/Login/styles.scss
+++ b/frontweb/src/pages/Login/styles.scss
@@ -2,14 +2,6 @@
   padding: 30px 20px;
 }
 
-.login-logo-image {
-  display: none;
-}
-
-.login-contentInfo {
-  display: none;
-}
-
 .login-details {
   border-radius: 20px;
   background-color: white;
@@ -69,6 +61,10 @@
 
 .login-button-box {
   margin: 15px;
+  border: none;
+  background-color: white;
+  justify-content: center;
+  width: 100%;
   button {
     width: 100%;
   }
@@ -108,39 +104,13 @@
   .login-container {
     display: flex;
     flex-direction: row-reverse;
-    width: 100%;
+    width: 90%;
   }
 
   .login-details {
     margin-right: 10px;
-    width: 50%;
-    height: 780px;
-  }
-
-  .login-container-imageAndInfo {
     width: 100%;
-    margin: 20px 150px;
-  }
-
-  .login-contentInfo {
-    width: 600px;
-    display: flex;
-    flex-direction: column;
-    h1 {
-      padding-bottom: 30px;
-      font-size: 3em;
-    }
-    p {
-      padding-bottom: 30px;
-      width: 400px;
-      font-size: 1.3em;
-      color: #9e9e9e;
-    }
-  }
-
-  .login-logo-image {
-    display: flex;
-    justify-content: flex-start;
+    height: 780px;
   }
 
   .login-button-box {
